[gd_scene load_steps=68 format=3 uid="uid://dhtnat50lg2ld"]

[ext_resource type="Script" uid="uid://2t8yusqv15fi" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://craawer3dnl0s" path="res://res/models/red.png" id="2_btcbx"]
[ext_resource type="Texture2D" uid="uid://du4u6wkx82fue" path="res://res/models/circle.png" id="3_btcbx"]
[ext_resource type="Script" uid="uid://do5qpdtjv3b2c" path="res://Player/camera.gd" id="3_gwnis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btcbx"]
size = Vector2(51, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("2_btcbx")
region = Rect2(1899, 399, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvbyc"]
atlas = ExtResource("2_btcbx")
region = Rect2(2110, 399, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvnt1"]
atlas = ExtResource("2_btcbx")
region = Rect2(1688, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmt7"]
atlas = ExtResource("2_btcbx")
region = Rect2(1899, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4i3b"]
atlas = ExtResource("2_btcbx")
region = Rect2(2110, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvbbp"]
atlas = ExtResource("2_btcbx")
region = Rect2(2321, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v2uk"]
atlas = ExtResource("2_btcbx")
region = Rect2(2532, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nl3"]
atlas = ExtResource("2_btcbx")
region = Rect2(2743, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hx1r"]
atlas = ExtResource("2_btcbx")
region = Rect2(2954, 532, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("2_btcbx")
region = Rect2(2110, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_qas3k"]
atlas = ExtResource("2_btcbx")
region = Rect2(2321, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwt4"]
atlas = ExtResource("2_btcbx")
region = Rect2(2532, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdg72"]
atlas = ExtResource("2_btcbx")
region = Rect2(2743, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpoj2"]
atlas = ExtResource("2_btcbx")
region = Rect2(2954, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e3ym"]
atlas = ExtResource("2_btcbx")
region = Rect2(3165, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("2_btcbx")
region = Rect2(211, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("2_btcbx")
region = Rect2(422, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("2_btcbx")
region = Rect2(633, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("2_btcbx")
region = Rect2(844, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("2_btcbx")
region = Rect2(2532, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("2_btcbx")
region = Rect2(2743, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("2_btcbx")
region = Rect2(2954, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("2_btcbx")
region = Rect2(2532, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("2_btcbx")
region = Rect2(2321, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("2_btcbx")
region = Rect2(2743, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("2_btcbx")
region = Rect2(2954, 931, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("2_btcbx")
region = Rect2(0, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("2_btcbx")
region = Rect2(211, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("2_btcbx")
region = Rect2(422, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("2_btcbx")
region = Rect2(633, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("2_btcbx")
region = Rect2(844, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("2_btcbx")
region = Rect2(422, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("2_btcbx")
region = Rect2(844, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("2_btcbx")
region = Rect2(1055, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("2_btcbx")
region = Rect2(1266, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("2_btcbx")
region = Rect2(1477, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("2_btcbx")
region = Rect2(1688, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("2_btcbx")
region = Rect2(1899, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("2_btcbx")
region = Rect2(2110, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("2_btcbx")
region = Rect2(2321, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("2_btcbx")
region = Rect2(2532, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("2_btcbx")
region = Rect2(2743, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("2_btcbx")
region = Rect2(2954, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o1l"]
atlas = ExtResource("2_btcbx")
region = Rect2(3165, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2n6q"]
atlas = ExtResource("2_btcbx")
region = Rect2(3376, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6x0f"]
atlas = ExtResource("2_btcbx")
region = Rect2(3587, 0, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp1hh"]
atlas = ExtResource("2_btcbx")
region = Rect2(0, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = ExtResource("2_btcbx")
region = Rect2(211, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = ExtResource("2_btcbx")
region = Rect2(422, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4lon"]
atlas = ExtResource("2_btcbx")
region = Rect2(633, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynux"]
atlas = ExtResource("2_btcbx")
region = Rect2(844, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30e8"]
atlas = ExtResource("2_btcbx")
region = Rect2(1055, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pogt"]
atlas = ExtResource("2_btcbx")
region = Rect2(1266, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie76m"]
atlas = ExtResource("2_btcbx")
region = Rect2(1477, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy65m"]
atlas = ExtResource("2_btcbx")
region = Rect2(1688, 133, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_maysp"]
atlas = ExtResource("2_btcbx")
region = Rect2(3376, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l10g"]
atlas = ExtResource("2_btcbx")
region = Rect2(3165, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rl0i"]
atlas = ExtResource("2_btcbx")
region = Rect2(2954, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x5p2"]
atlas = ExtResource("2_btcbx")
region = Rect2(2743, 266, 211, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eb1q"]
atlas = ExtResource("2_btcbx")
region = Rect2(2532, 266, 211, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvbyc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvnt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4i3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvbbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v2uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hx1r")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qas3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdg72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpoj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e3ym")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}],
"loop": true,
"name": &"Double Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}],
"loop": true,
"name": &"Hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_755ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbimk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2n6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6x0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp1hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyprq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4lon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d30e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie76m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy65m")
}],
"loop": true,
"name": &"Run",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_maysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l10g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x5p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eb1q")
}],
"loop": true,
"name": &"Wall Jump",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ntmi"]
size = Vector2(14.7574, 21.5814)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 19
script = ExtResource("1_4ntmi")

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(1.5, -15)
shape = SubResource("RectangleShape2D_btcbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -22)
sprite_frames = SubResource("SpriteFrames_wvbyc")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.99996, -8)
rotation = 3.14159
scale = Vector2(1.0842, -1.48276)
shape = SubResource("RectangleShape2D_4ntmi")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 563
limit_right = 1920
limit_bottom = 1170
limit_smoothed = true
position_smoothing_speed = 3.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = -0.1
drag_vertical_offset = -0.1
drag_left_margin = 0.1
drag_right_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("3_gwnis")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
color = Color(0.993458, 0.780416, 0.637269, 1)
range_z_min = -1
shadow_enabled = true
texture = ExtResource("3_btcbx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_entered"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
